--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -7,8 +7,8 @@
 }
 
 .bodylayout {
-  border-right: 1px solid #f5f5f5;
-  border-left: 1px solid #f5f5f5;
+  border-right: 1px solid #e6e6e6;
+  border-left: 1px solid #e6e6e6;
 }
 /* 
 .sidebar {
@@ -80,7 +80,7 @@
   .bottombar {
     position: fixed;
     display: inline-block;
-    border-top: 1px solid #f5f5f5;
+    border-top: 1px solid #e6e6e6;
     width: 100%;
     bottom: 0;
   }
