--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -76,10 +76,13 @@
   .bodylayout {
     width: auto;
     border: none;
+    margin-bottom: 5rem;
+    margin-top: 2.5rem;
   }
 
   .bottombar {
     position: fixed;
+    background-color: #ffffff;
     display: inline-block;
     border-top: 1px solid #e6e6e6;
     width: 100%;
