update navbar for mobile

--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -57,7 +57,6 @@
   .mainlayout {
     grid-template-columns: 1fr;
     margin: 0;
-    margin-top: 1.5rem;
   }
 
   .topnavbar--hide {
@@ -71,7 +70,8 @@
     border-bottom: 1px solid #e6e6e6;
     width: 100%;
     top: 0;
-    
+    transition-timing-function: ease-in;
+    transition: all 1s;
   }
 
   .sidebar {
@@ -81,7 +81,6 @@
     width: auto;
     border: none;
     margin-bottom: 5rem;
-    margin-top: 2.5rem;
   }
 
   .bottombar {
