--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -29,6 +29,10 @@
   display: none;
 }
 
+.bottomsheet {
+  display: none;
+}
+
 @media screen and (max-width: 1258px) {
   .mainlayout {
     max-width: 1078px;
@@ -101,5 +105,22 @@
     border-top: 1px solid #e6e6e6;
     width: 100%;
     bottom: 0;
+  }
+
+  .bottomsheet {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    -webkit-animation-name: fadeIn; /* Fade in the background */
+    -webkit-animation-duration: 0.4s;
+    animation-name: fadeIn;
+    animation-duration: 0.4s
   }
 }
