--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -20,7 +20,8 @@
   -webkit-animation-name: slideIn;
   -webkit-animation-duration: 0.4s;
   animation-name: slideIn;
-  animation-duration: 0.4s
+  animation-duration: 0.4s;
+  padding: 10px 15px;
 }
 
 @-webkit-keyframes slideIn {
