--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -13,7 +13,7 @@
 .bottomsheet__body {
   position: fixed;
   bottom: 0;
-  background-color: #fefefe;
+  background-color: #fff;
   width: 100%;
   border-top-left-radius: 25px;
   border-top-right-radius: 25px;
