--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -22,7 +22,19 @@
   animation-name: slideIn;
   animation-duration: 0.4s;
   padding: 10px 15px;
+  display: grid;
 }
+
+.bottomrec {
+  width: 40px;
+  height: 5px;
+  background-color: #f5f5f5;
+  border-radius: 9999px;
+  justify-self: center;
+}
+
+
+
 
 @-webkit-keyframes slideIn {
   from {
