--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -21,9 +21,8 @@
   -webkit-animation-duration: 0.4s;
   animation-name: slideIn;
   animation-duration: 0.4s;
-  padding: 10px 15px;
   display: grid;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .bottomrec {
@@ -32,10 +31,56 @@
   background-color: #f5f5f5;
   border-radius: 9999px;
   justify-self: center;
+  margin-top: 10px;
 }
 
 
+.modal-header {
+  border-bottom: 1px solid #e5e5e5;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+}
 
+
+.modal-body {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+
+  cursor: pointer;
+  padding:15px 15px
+}
+
+.modal-body:hover {
+  background-color: #f5f5f5;
+}
+
+.bottomsheet__icon {
+  height: 20px;
+  width: 20px;
+  fill: #536471
+}
+
+.bottomsheet__content {
+  padding-bottom: 20px;
+}
+
+.bottomsheet__username {
+  font-weight: 600;
+  font-size: 14px;
+  
+  color: #0f1419;
+}
+
+.bottomsheet__linkname {
+  font-size: 12px;
+  color: #999;
+}
+
+.bottomsheet__icon_name {
+  font-size: 15px;
+  color: #0f1419;
+}
 
 @-webkit-keyframes slideIn {
   from {
