--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -34,21 +34,19 @@
   margin-top: 10px;
 }
 
-
 .modal-header {
   border-bottom: 1px solid #f5f5f5;
   padding: 10px 15px;
   margin-bottom: 10px;
 }
 
-
 .modal-body {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 
   cursor: pointer;
-  padding:15px 15px
+  padding: 15px 15px;
 }
 
 .modal-body:hover {
@@ -58,7 +56,7 @@
 .bottomsheet__icon {
   height: 20px;
   width: 20px;
-  fill: #536471
+  fill: #0f1419;
 }
 
 .bottomsheet__content {
@@ -68,7 +66,7 @@
 .bottomsheet__username {
   font-weight: 600;
   font-size: 14px;
-  
+
   color: #0f1419;
 }
 
@@ -82,7 +80,7 @@
 .bottomsheet__icon_name {
   font-size: 15px;
   font-weight: 300;
-  color: #536471
+  color: #0f1419;
 }
 
 @-webkit-keyframes slideIn {
