--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -95,7 +95,8 @@
   .bodylayout {
     width: auto;
     border: none;
-    margin-bottom: 5rem;
+    margin-top: 3.7rem;
+    margin-bottom: 4.5rem;
   }
 
   .bottombar {
