--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: inherit;
+  font-size: 62.5%;
 }
 
 code {
