--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,16 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -ms-overflow-style: none;
 }
 
 html {
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -17,6 +21,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: inherit;
   font-size: 62.5%;
+  color: #0f1419;
 }
 
 code {
