--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -3,56 +3,254 @@
 }
 
 .search__form {
-    background-color: #f5f5f5;
-    border-radius: 9999px;
-    padding: 0.5rem;
-    display: flex;
-    align-items: center;
-    gap: .2rem;
+  background-color: #f5f5f5;
+  border-radius: 9999px;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
 
+.search__input {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-family: inherit;
+  width: 100%;
+  font-weight: 300;
+}
+
+.search__icon {
+  width: 25px;
+  height: 25px;
+  fill: #999;
+}
+
+.homepage__section {
+  margin-top: 1rem;
+  height: 100vh;
+  overflow-y: scroll;
+  width: 100%;
+  display: grid;
+  align-items: start;
+}
+
+.letsee {
+  display: grid;
+}
+
+.homepage__advert {
+  padding: 10px 0;
+  display: flex;
+  gap: 0.5rem;
+  overflow-x: scroll;
+}
+
+.homepage__advert img {
+  width: 100%;
+}
+
+.homeproducts__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem 0;
+}
+
+.homeproducts__h2 {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.homeproducts__v {
+  font-size: 14px;
+  font-weight: 500px;
+}
+
+.section1 {
+  overflow: hidden;
+}
+
+.products__wrapper {
+  width: 100%;
+  display: flex;
+  overflow-x: scroll;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.products__wrapper .item {
+  width: 100%;
+  height: 190px;
+  text-align: center;
+  border-left: 0.5px solid #f5f5f5;
+  border-right: px solid #f5f5f5;
+}
+
+.homeproducts__item__icon {
+  width: 18px;
+  height: 18px;
+}
+
+/* .p-slider {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0px;
+}
+
+.product-slider-heading {
+  font-size: 28px;
+  text-transform: uppercase;
+  color: #313131;
+  text-align: center;
+  margin: 0px;
+}
+
+.product-box {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
+  margin: 0px 20px;
+  position: relative;
+}
+
+.p-img-container {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  overflow: hidden;
+}
+
+.p-img a, .p-img{
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+
+
+.p-img a img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+  animation: fade 0.6s;
+}
+
+
+.p-img-back {
+  display: none;
+}
+
+.p-img-container:hover .p-img-back {
+  display: block;
+}
+
+.p-img-container:hover .p-img-front {
+  display: none;
+}
+
+
+@keyframes fade {
+  0% {
+    opacity: 0;
   }
-
-  .search__input {
-    background-color: transparent;
-    outline: none;
-    border: none;
-    font-family: inherit;
-    width: 100%;
-    font-weight: 300;
+  100% {
+    opacity: 1;
   }
+}
 
-  .search__icon {
-    width: 25px;
-    height: 25px;
-    fill: #999;
-  }
+.p-box-text {
+  margin-top: 5px;
+  width: 100%;
+}
 
-  
-  .homepage__advert {
-    padding: 10px 0;
-    display: flex;
-    gap: .5rem;
-    overflow-x: scroll;
-    width: 100%;
-  }
+.product-category {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
-  .homepage__advert img {
-    width: 100%;
-  }
 
+.product-category span {
+  color: #acacac;
+  font-size: 0.9rem;
+  margin: 5px 0px;
+}
+
+
+.product-title {
+  color: #333333;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all ease 0.3s;
+}
+
+.product-title:hover {
+  color: #111111;
+  opacity: 0.7;
+  transition: all ease 0.3s;
+
+}
+
+.price-buy {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 8px;
+}
+
+
+.price-buy .p-price {
+  font-size: 1.3rem;
+  color: #333;
+  font-weight: 700;;
+}
+
+.price-buy .p-buy-btn {
+  color: #e63b3b;
+  margin: 0px 5px;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.price-buy .p-buy-btn:hover {
+  text-decoration: underline;
+}
+
+.p-discount {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 65px;
+  height: 24px;
+  color: #fff;
+  background-color: #e63b3b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.7rem;
+  letter-spacing: 1px;
+  z-index: 100;
+  border-radius: 3px;
+} */
 
 @media screen and (max-width: 500px) {
-.homepage__container {
+  .homepage__container {
     padding: 0px 15px;
   }
 
   .search__form {
     display: none;
   }
-  
 
   .homepage__advert {
     padding-top: 0;
   }
-
 }
