--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 *{
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
   -ms-overflow-style: none;
 }
@@ -13,7 +13,8 @@ html {
   display: none;
 }
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
