--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -75,20 +75,65 @@
   width: 100%;
   display: flex;
   overflow-x: scroll;
-  border-top: 1px solid #f5f5f5;
-  border-bottom: 1px solid #f5f5f5;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
 }
 
 .products__wrapper .item {
   width: 100%;
-  text-align: center;
-  border-left: 0.5px solid #f5f5f5;
-  border-right: px solid #f5f5f5;
+  height: 352px;
+  display: grid;
+  justify-content: space-between;
+  border-left: 0.5px solid #e6e6e6;
+  border-right: px solid #e6e6e6;
+}
+
+.item img {
+  width: 234px;
+  height: 209px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.products__itself {
+  padding: 0 10px;
+}
+.item__name {
+  height: 34px;
+  font-size: 11px;
+  font-weight: 500;
+  letter-spacing: 0.004rem;
+  color: #0f1419;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+
+
+}
+
+.homeproducts__item__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .homeproducts__item__icon {
   width: 18px;
   height: 18px;
+  fill: #999;
+}
+
+.homeproducts__lowest {
+  font-size: 10px;
+  line-height: 14px;
+  color: #999;
+}
+
+.homeproducts__price {
+  font-size: 15px;
+  font-weight: 600;
+  color: #0f1419;
 }
 
 /* .p-slider {
