--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -77,6 +77,7 @@
   overflow-x: scroll;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
+  border-right: 1px solid #e6e6e6;
 }
 
 .products__wrapper .item {
@@ -85,7 +86,7 @@
   display: grid;
   justify-content: space-between;
   border-left: 0.5px solid #e6e6e6;
-  border-right: px solid #e6e6e6;
+  /* border-right: px solid #e6e6e6; */
 }
 
 .item img {
@@ -108,8 +109,6 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-
-
 }
 
 .homeproducts__item__content {
