--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -77,7 +77,6 @@
   overflow-x: scroll;
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
-  border-right: 1px solid #e6e6e6;
 }
 
 .products__wrapper .item {
@@ -164,9 +163,13 @@
   }
 
   .item__name {
-    margin-bottom: 10px;
-    font-weight: 400;
+    margin: 8px 0;
+    height: 34px;
     font-size: 0.75rem;
+    line-height: 1.375;
+    font-weight: 500;
+    letter-spacing: 0.004rem;
+    color: #0f0f0f;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
