--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -72,7 +72,7 @@
     display: none;
     position: fixed;
     background-color: #ffffff;
-    border-bottom: 1px solid #e6e6e6;
+    border-bottom: 1px solid #111;
     width: 100%;
     top: 0;
     transition-timing-function: ease-in;
@@ -83,7 +83,7 @@
     display: block;
     position: fixed;
     background-color: #ffffff;
-    border-bottom: 1px solid #e6e6e6;
+    border-bottom: 1px solid #111;
     width: 100%;
     top: 0;
     transition-timing-function: ease-in;
