--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -50,7 +50,7 @@
 }
 
 .modal-header {
-  border-bottom: 1px solid #f5f5f5;
+  border-bottom: 1px solid #111;
   padding: 10px 20px;
   margin-bottom: 10px;
 }
