--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -7,8 +7,8 @@
 }
 
 .bodylayout {
-  border-right: 1px solid #e6e6e6;
-  border-left: 1px solid #e6e6e6;
+  border-right: 1px solid #111;
+  border-left: 1px solid #111;
   height: 100vh;
 }
 /* 
@@ -104,7 +104,7 @@
     position: fixed;
     background-color: #ffffff;
     display: inline-block;
-    border-top: 1px solid #e6e6e6;
+    border-top: 1px solid #111;
     width: 100%;
     bottom: 0;
   }
