--- a/src/Layouts/Layout.css
+++ b/src/Layouts/Layout.css
@@ -7,8 +7,8 @@
 }
 
 .bodylayout {
-  border-right: 1px solid #999;
-  border-left: 1px solid #999;
+  border-right: 1px solid #e5e5e5;
+  border-left: 1px solid #e5e5e5;
   height: 100vh;
 }
 /* 
@@ -72,7 +72,7 @@
     display: none;
     position: fixed;
     background-color: #ffffff;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #e5e5e5;
     width: 100%;
     top: 0;
     transition-timing-function: ease-in;
@@ -83,7 +83,7 @@
     display: block;
     position: fixed;
     background-color: #ffffff;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #e5e5e5;
     width: 100%;
     top: 0;
     transition-timing-function: ease-in;
@@ -104,7 +104,7 @@
     position: fixed;
     background-color: #ffffff;
     display: inline-block;
-    border-top: 1px solid #999;
+    border-top: 1px solid #e5e5e5;
     width: 100%;
     bottom: 0;
   }
