--- a/src/Layouts/Sidebar.css
+++ b/src/Layouts/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar__body {
   display: grid;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
   padding: 10px 15px;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .sidebartop__tag {
-  color: #999;
+  color: #e5e5e5;
 }
 
 .sidebartop__more {
@@ -66,7 +66,6 @@
 }
 
 @media screen and (max-width: 1258px) {
-
   .sidebar__row {
     align-items: center;
     justify-self: center;
