--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -87,12 +87,12 @@
   font-size: 12px;
   font-weight: 300;
   margin-top: 2px;
-  color: #e5e5e5;
+  color: #999;
 }
 
 .bottomsheet__icon_name {
   font-size: 15px;
-  font-weight: 300;
+  font-weight: 400;
   color: #0f1419;
 }
 
