--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -130,7 +130,7 @@
 .homeproducts__lowest {
   font-size: 10px;
   line-height: 14px;
-  color: #e5e5e5;
+  color: #999;
 }
 
 .homeproducts__price {
