--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -68,7 +68,7 @@
 }
 
 .homeproducts__v {
-  font-size: 12px;
+  font-size: 1px;
   font-weight: 500;
 }
 
@@ -79,9 +79,8 @@
 .products__wrapper {
   width: 100%;
   display: flex;
+  gap: 0.5rem;
   overflow-x: scroll;
-  border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
 }
 
 .products__wrapper .item {
@@ -89,7 +88,8 @@
   height: 352px;
   display: grid;
   justify-content: space-between;
-  border-left: 1px solid #e5e5e5;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
   /* border-right: px solid #e6e6e6; */
 }
 
@@ -98,6 +98,7 @@
   height: 209px;
   object-fit: cover;
   object-position: center;
+  border-radius: 3px 3px 0 0;
 }
 
 .products__itself {
@@ -161,7 +162,6 @@
     height: 270px;
     display: grid;
     justify-content: space-between;
-    border-left: 1px solid #e5e5e5;
     /* border-right: px solid #e6e6e6; */
   }
 
