--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -53,7 +53,7 @@
     gap: 1rem;
     overflow-x: scroll;
     border-bottom: 2px solid #e6e6e6;
-    padding: 0 15px 15px 15px;
+    padding: 15px 15px 15px 15px;
     margin-bottom: .5rem;
   }
 
