--- a/src/Layouts/Topsearchnavbar.css
+++ b/src/Layouts/Topsearchnavbar.css
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1rem;
+  margin: 1.5rem 0;
 }
 
 .bottomsheetsortlist {
