--- a/src/Layouts/Topsearchnavbar.css
+++ b/src/Layouts/Topsearchnavbar.css
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 1rem 0;
+  margin-top: 1rem;
 }
 
 .bottomsheetsortlist {
@@ -43,11 +43,12 @@
   gap: 0.5rem;
   flex-wrap: wrap;
   padding: 15px 15px;
+  margin-bottom: 1rem;
 }
 
 .btssort {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .btsorlist {
