--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -13,17 +13,18 @@
   display: none;
 }
 
-.searchproducts {
-  margin-top: 1rem;
+/* .searchproducts {
+  /* margin-top: 1rem;
   height: 100vh;
   overflow-y: scroll;
   width: 100%;
   display: grid;
-  align-items: start;
-}
+  align-items: start;*/
 
 .search__see {
   display: grid;
+  height: 100vh;
+  overflow-y: scroll;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   grid-gap: 0.5rem;
   padding: 20px 15px 0 15px;
