--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -25,7 +25,7 @@
 }
 .bottomsheet__body {
   position: fixed;
-  bottom: 0;
+  top: 0;
   background-color: #fff;
   width: 100%;
   /* border-top-left-radius: 20px;
