--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -179,7 +179,7 @@
     line-height: 1.375;
     font-weight: 500;
     letter-spacing: 0.004rem;
-    color: #0f0f0f;
+    color: #0f1419;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
