--- a/src/Pages/Notificationpage/Notificationpage.css
+++ b/src/Pages/Notificationpage/Notificationpage.css
@@ -30,10 +30,18 @@
   .notificationheader {
     font-size: 14px;
     font-weight: 500;
-    margin-bottom: .2rem;
+    margin-bottom: 0.3rem;
   }
 
   .notificationparagraph {
-      font-size: 12px;
+    font-size: 10px;
+    line-height: 1.375;
+    font-size: 0.65rem;
+    letter-spacing: 0.0004rem;
+    color: #0f1419;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 }
