--- a/src/Pages/Notificationpage/Notificationpage.css
+++ b/src/Pages/Notificationpage/Notificationpage.css
@@ -38,7 +38,7 @@
     line-height: 1.375;
     font-size: 0.65rem;
     letter-spacing: 0.0004rem;
-    color: #0f1419;
+    color: #999;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
