--- a/src/Pages/Notificationpage/Notificationpage.css
+++ b/src/Pages/Notificationpage/Notificationpage.css
@@ -8,11 +8,9 @@
   }
 
   .notificationitem {
-    
+    border-left: 4px solid #1a8cd8;
     display: flex;
     align-items: flex-start;
-    border: 1px solid #e5e5e5;
-    border-radius: 3px;
   }
 
   .notificationitem img {
