--- a/src/Layouts/Topnavbar.css
+++ b/src/Layouts/Topnavbar.css
@@ -48,7 +48,7 @@
 }
 
 .modal-header {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #f5f5f5;
   padding: 10px 20px;
   margin-bottom: 10px;
 }
