--- a/src/Layouts/Topsearchnavbar.css
+++ b/src/Layouts/Topsearchnavbar.css
@@ -54,7 +54,7 @@
 .btsorlist {
   font-size: 13px;
   font-weight: 400;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #f5f5f5;
   padding: 10px 15px;
   border-radius: 9999px;
 }
