--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -23,7 +23,7 @@
 .search__icon {
   width: 25px;
   height: 25px;
-  fill: #e5e5e5;
+  fill: #f5f5f5;
 }
 
 .homepage__section {
@@ -88,7 +88,7 @@
   height: 352px;
   display: grid;
   justify-content: space-between;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #f5f5f5;
   border-radius: 3px;
   /* border-right: px solid #e6e6e6; */
 }
@@ -125,7 +125,7 @@
 .homeproducts__item__icon {
   width: 18px;
   height: 18px;
-  fill: #e5e5e5;
+  fill: #f5f5f5;
 }
 
 .homeproducts__lowest {
@@ -288,7 +288,7 @@
 }
 
 .product-title:hover {
-  color: #e5e5e5111;
+  color: #f5f5f5111;
   opacity: 0.7;
   transition: all ease 0.3s;
 
