--- a/src/Layouts/Bottombar.css
+++ b/src/Layouts/Bottombar.css
@@ -1,23 +1,23 @@
 .bottombar {
-    padding: 12px 18px;
+  padding: 12px 18px;
 }
 
 .bottombar-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .bottombar__icon {
-    width: 22px;
-    height: 22px;
+  width: 22px;
+  height: 22px;
 }
 
 .bottombar-item {
-    padding: 5px 5px;
+  padding: 5px 5px;
 }
 
 .bottombar-item:hover {
-    background-color: #f5f5f5;
-    border-radius: 9999px;
+  background-color: #1a8cd888;
+  border-radius: 9999px;
 }
