--- a/src/Layouts/Sidebar.css
+++ b/src/Layouts/Sidebar.css
@@ -15,7 +15,7 @@
 }
 
 .sidebar__row:hover {
-  background-color: #1a8cd888;
+  background-color: #e5e5e5;
   border-radius: 9999px;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .sidebartop__tag {
-  color: #1a8cd888;
+  color: #e5e5e5;
 }
 
 .sidebartop__more {
