--- a/src/Layouts/Topsearchnavbar.css
+++ b/src/Layouts/Topsearchnavbar.css
@@ -8,7 +8,7 @@
 
 .searchnavbar__form {
   display: flex;
-  background-color: #1a8cd888;
+  background-color: #e5e5e5;
   border-radius: 9999px;
   padding: 0.5rem;
   align-items: center;
@@ -54,7 +54,7 @@
 .btsorlist {
   font-size: 13px;
   font-weight: 400;
-  border: 1px solid #1a8cd888;
+  border: 1px solid #e5e5e5;
   padding: 10px 15px;
   border-radius: 9999px;
 }
