--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -88,7 +88,7 @@
   height: 352px;
   display: grid;
   justify-content: space-between;
-  border: 1px solid #e5e5e5;
+  /* border: 1px solid #e5e5e5; */
   border-radius: 3px;
   /* border-right: px solid #e6e6e6; */
 }
