--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -32,7 +32,7 @@
 
 .search_item {
   height: 350px;
-  /* border: 1px solid #e5e5e5; */
+  border: 1px solid #e5e5e5;
   border-radius: 3px;
   width: 100%;
   height: 352px;
