--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -13,6 +13,10 @@
   display: none;
 }
 
+.searchproducts {
+  padding: 20px 15px 0 15px;
+}
+
 /* .searchproducts {
   /* margin-top: 1rem;
   height: 100vh;
@@ -26,14 +30,14 @@
   height: 100vh;
   overflow-y: scroll;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  grid-gap: 0.5rem;
-  padding: 20px 15px 0 15px;
+  border-left: .5px solid #e5e5e5;
+  border-bottom: .5px solid #e5e5e5;
 }
 
 .search_item {
   height: 350px;
-  border: 1px solid #e5e5e5;
-  border-radius: 3px;
+  
+  border-top: .5px solid #e5e5e5;border-right: .5px solid #e5e5e5;
   width: 100%;
   height: 352px;
   display: grid;
@@ -43,7 +47,6 @@
   height: 209px;
   object-fit: cover;
   object-position: center;
-  border-radius: 3px 3px 0 0;
 }
 @media screen and (max-width: 500px) {
   .searchcategory__wrapper {
