--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -30,14 +30,15 @@
   height: 100vh;
   overflow-y: scroll;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  border-left: .5px solid #e5e5e5;
-  border-bottom: .5px solid #e5e5e5;
+  border-left: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .search_item {
   height: 350px;
-  
-  border-top: .5px solid #e5e5e5;border-right: .5px solid #e5e5e5;
+
+  border-top: 1px solid #e5e5e5;
+  border-right: 1px solid #e5e5e5;
   width: 100%;
   height: 352px;
   display: grid;
