--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -13,10 +13,6 @@
   display: none;
 }
 
-.searchproducts {
-  padding: 20px 15px 0 15px;
-}
-
 /* .searchproducts {
   /* margin-top: 1rem;
   height: 100vh;
@@ -30,15 +26,14 @@
   height: 100vh;
   overflow-y: scroll;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  border-left: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
+  grid-gap: 0.5rem;
+  padding: 20px 15px 0 15px;
 }
 
 .search_item {
   height: 350px;
-
-  border-top: 1px solid #e5e5e5;
-  border-right: 1px solid #e5e5e5;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
   width: 100%;
   height: 352px;
   display: grid;
@@ -48,6 +43,7 @@
   height: 209px;
   object-fit: cover;
   object-position: center;
+  border-radius: 3px 3px 0 0;
 }
 @media screen and (max-width: 500px) {
   .searchcategory__wrapper {
