--- a/src/Pages/SearchPage/Searchpage.css
+++ b/src/Pages/SearchPage/Searchpage.css
@@ -55,6 +55,7 @@
     gap: 0.5rem;
     overflow-x: scroll;
     padding: 15px;
+    border-bottom: 2px solid #e5e5e5;
   }
 
   .searchCategory__item {
@@ -68,7 +69,7 @@
   }
 
   .searchproducts {
-    margin-top: 3rem;
+    margin-top: 3.1rem;
   }
 
   .search_item {
