--- a/src/Layouts/Topsearchnavbar.css
+++ b/src/Layouts/Topsearchnavbar.css
@@ -8,7 +8,7 @@
 
 .searchnavbar__form {
   display: flex;
-  background-color: #e5e5e5;
+  background-color: #f5f5f5;
   border-radius: 9999px;
   padding: 0.5rem;
   align-items: center;
@@ -26,7 +26,6 @@
   outline: none;
   border: none;
   font-family: inherit;
-  font-weight: 300;
   width: 100%;
 }
 
